# p0003-irrigacao-abrigo

./: .clang-format  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  main.c  main.h  modbus_params.h  mqtt.c  mqtt.h  types.h  wifi.c  wifi.h
main/motor/: inversor.c  inversor.h
main/mqtt/: mqtt.c  mqtt.h
main/rele/: rele.c  rele.h
main/sens_tpu/: bme280.c  bme280.h  sens_tpu.c  sens_tpu.h
main/sntp/: sntp.c  sntp.h
main/teclado/: teclado.c  teclado.h
main/wifi/: wifi.c  wifi.h
